--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/commonlibsse"]
 	path = lib/commonlibsse
 	url = https://github.com/libxse/commonlibsse.git
+[submodule "extern/clib-utils"]
+	path = extern/clib-utils
+	url = https://github.com/powerof3/CLibUtil
